client/styles/strider.less
@import "libs.less";
@import "config.less";
@import "build.less";
@import "dashboard.less";
@import "projects.less";
@import "admin/users.less";
@import "admin/plugins.less";

@import "strider-colors.less";
@import "alerts.less";

html, body {
  height: 100%;
}

body {
  background-color: #fff;
  font-family: 'Source Sans Pro', sans-serif;
}

h3 {
  font-weight: normal;
}

.wrap {
  min-height: ~'calc(100vh - 138px)';
  margin-bottom: 1em;
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
.ng-cloak, .x-ng-cloak {
  display: none !important;
}

.truncate {
  width: 300px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#kickoff-app {
  .github-main-content p,
  .github-main-content {
    font-size: 18px;
    line-height: 26px;
  }
}

.progress {
  margin-bottom: 0;
}

.configure-action i {
  margin-top: 4px;
  display: inline-block;
  margin-left: 5px;
}

.docs-section {
  padding-top: 40px;
}
.docs p {
  font-size: 15px;
}
img.manual_setup {
  border: 1px solid #021a40;
}
.success {
  background: #9BCD9B;
}
.failure {
  background: #EE6363;
}
.success-text {
  color: @strider-bg-passed;
}
.failure-text {
  color: @strider-bg-failed;
}
.error-text {
  color: @strider-bg-errored;
}
.running-text {
  color: @strider-bg-running;
}
.waiting-text {
  color: #666;
}

footer {
  border-top:1px solid #ddd;
  background-color:#f0f0f0;
  padding:10px;
}

footer p {
  text-align: center;
  /* center align it with the container */

}
.dashboard-button,
.repo-action,
.start-manual-setup {
  float: right;
}
.header-emphasis {
  color: #455b87;
}
.job-pre-console {
  margin-top: 0;

  .job-pre-console-inner {
    min-height: 0;
  }
}
.job-list {
  border: 1px solid;
  border-radius: 3px;
  margin-left: 10px;
}
.job-list-item {
  width: 95%;
  border: 1px solid;
  border-radius: 3px;
  padding: 5px;
  margin: 10px;
}
.job-list-item:nth-child(2n) {
  background-color: #f5f5f5;
}
.job-notice {
  float: right;
}
#build-detail-buttons {
  border: 1px solid;
  border-radius: 3px;
  margin-left: 10px;
  padding: 10px;
}

#commit-id,
.build-item-committer {
  float: right;
}
#commit-msg,
#build-duration,
.build-item-duration {
  float: right;
}
div#repo-list-viewall {
  margin: 15px;
}
.results-detail-times {
  border-top: 1px solid;
  border-color: #999999;
}
table.log {
  font-family: "Monaco", Courier, monospace;
  font-size: 14px;
  width: 100%;
  table-layout: fixed;
  margin-bottom: 20px;
  clear: both;
}
tr.logEntry {
  height: 53px;
}
tr.logEntry td {
  border-top: solid thin #CCC;
  padding: 0.5em;
  text-align: left;
}
.logEntry {
  color: #444;
}
.logEntry.repeated {
  display: none;
}
a.repeats {
  font-size: 75%;
  padding: 5px 5px 2px 5px;
  background-color: #EEE;
  border: 1px solid #999;
  opacity: 0.8;
  color: black;
  text-decoration: none;
}
.commandDetails .request {
  height: 20px;
}
.commandDetails .answer {
  color: #909;
  float: right;
  max-width: 75%;
  text-align: right;
}
.commandDetails .result {
  font-size: 80%;
  display: inline;
}
.commandDetails span.duration {
  color: #999;
  font-size: 80%;
  padding-left: 15px;
}
.commandDetails table {
  border: none;
  margin-top: 5px;
  font-size: 80%;
  margin-left: 1em;
}
.commandDetails table th {
  border-spacing: 0px;
  padding: 0px;
  margin: 0px;
}
.commandDetails table td {
  border: none;
  border-spacing: 0px;
  padding: 0px;
  margin: 0px;
}

.passed {
  border-left: 6px solid @strider-bg-passed;
  background-color: lighten(@strider-bg-passed, 43%);
}
.failed {
  border-left: 6px solid @strider-bg-failed;
  background-color: lighten(@strider-bg-failed, 43%);
}
.errored {
  border-left: 6px solid @strider-bg-errored;
  background-color: lighten(@strider-bg-errored, 35%);
}
.running {
  border-left: 6px solid @strider-bg-running;
  background-color: lighten(@strider-bg-running, 40%);
}
.warning {
  background-color: #fffca9;
}
.submitted {
  background-color: lighten(@strider-bg-submitted, 20%);
  border-left: 6px solid @strider-bg-submitted;
}
.repeated.passed {
  background-color: @strider-bg-passed;
}
.repeated.failed {
  background-color: @strider-bg-failed;
}
td.screenshot img {
  width: 40px;
  height: 30px;
}
tr.logEntry td.screenshot {
  font-family: 'Myriad Pro', Myriad, Helvetica, Arial, sans-serif;
  width: 6.5em;
  padding-left: 10px;
  text-align: center;
}
@media (max-width: 768px) {
  .repo-action {
    float: left;
  }
}
.gravatar {
  display: inline-block;
  margin-top: -2px;
  margin-bottom: 2px;
  margin-right: 3px;
  padding: 1px;
  line-height: 1px;
  vertical-align: middle;
  font-size: 1px;
  background: #fff;
  border: 1px solid #c8c8c8;
}
.hero-subunit {
  padding: 60px;
  margin-bottom: 30px;
  background-color: #f5f5f5;
  border-radius: 6px;
}
.hero-subunit p {
  font-size: 18px;
  font-weight: 200;
}
hero-vsub-unit {
  padding: 60px;
  margin-bottom: 30px;
  background-color: #f5f5f5;
  border-radius: 6px;
}
hero-vsub-unit p,
hero-vsub-unit label {
  font-size: 18px;
  font-weight: 200;
}
.big-label {
  padding: 1px 3px 2px;
  font-size: 26px;
  font-weight: bold;
  color: #ffffff;
  text-transform: uppercase;
  background-color: #999999;
  border-radius: 3px;
}

@media (min-width: 980px) {
  body .wrap {
    padding-top: 50px;
    padding-bottom: 51px;
    margin-bottom: -51px;
  }

  .nav-collapse {
    padding-left: 80px;
  }
}

@media (min-width: 768px) {
  body .wrap {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding-bottom: 51px;
    margin-bottom: -51px;
  }

  footer p {
    text-align: center;
  }
}

@media (max-width: 480px) {
  .hero-unit {
    padding: 30px;
    margin-bottom: 30px;
    background-color: #f5f5f5;
    border-radius: 6px;
  }
  .hero-unit h1 {
    margin-right: 0;
    margin-left: 0;
    font-size: 40px;
    line-height: 1;
    letter-spacing: -1px;
  }
  .hero-unit p {
    font-size: 18px;
    font-weight: 200;
    line-height: 27px;
  }
}
/* Page header tweaks */
.page-header {
  background-color: #f5f5f5;
  padding: 20px 20px 10px;
  margin: -20px -20px 20px;
}
.topbar .btn {
  border: 0;
}
.spinner {
  vertical-align: middle;
  margin-right: 20px;
}
#spinner {
  display: none;
}
pre.console-output {
  overflow: auto;
  background-color: black;
  color: white;
  position: absolute;
  top: 65px;
  bottom: 0;
  left: 0;
  right: 0;
  white-space: pre;
}
pre.console-output-segment {
  width: 96%;
  overflow: auto;
  background-color: black;
  color: white;
}
span.green {
  color: green;
}
span.blue {
  color: blue;
}
span.red {
  color: #CE160C;
}
span.white {
  color: #BDC7C7;
}
span.yellow {
  color: #C6C33C;
}
span.magenta {
  color: magenta;
}
span.cyan {
  color: cyan;
}
span.grey {
  color: grey;
}
span.bg-green {
  background-color: green;
}
span.bg-blue {
  background-color: blue;
}
span.bg-red {
  background-color: #CE160C;
}
span.bg-white {
  background-color: #BDC7C7;
}
span.bg-yellow {
  background-color: #C6C33C;
}
span.bg-magenta {
  background-color: magenta;
}
span.bg-cyan {
  background-color: cyan;
}
span.bg-grey {
  background-color: grey;
}
span.bold {
  font-weight: bold;
}
span.italic {
  font-style: italic;
}
span.underline {
  text-decoration: underline;
}
.sidebar-nav {
  padding: 9px 0;
}
.dropdown-menu .sub-menu {
  left: 100%;
  position: absolute;
  top: 0;
  visibility: hidden;
  margin-top: -1px;
}
.dropdown-menu li:hover .sub-menu {
  visibility: visible;
}
.dropdown:hover .dropdown-menu {
  display: block;
}
.nav-tabs .dropdown-menu,
.nav-pills .dropdown-menu,
.navbar .brand {
  line-height: 1.2em;
}
.navbar .nav > li > a {
  line-height: 1.9em;
}
.navbar .dropdown-menu {
  margin-top: 0;
}
.navbar .sub-menu:before {
  border-bottom: 7px solid transparent;
  border-left: none;
  border-right: 7px solid rgba(0, 0, 0, 0.2);
  border-top: 7px solid transparent;
  left: -7px;
  top: 10px;
}
.navbar .sub-menu:after {
  border-top: 6px solid transparent;
  border-left: none;
  border-right: 6px solid #fff;
  border-bottom: 6px solid transparent;
  left: 10px;
  top: 11px;
  left: -6px;
}
.navbar .btn-navbar {
  color: #fff;
}
/* pricing (from wrapbootstrap template) */
#pricing h2 {
  text-align: center;
  font-size: 14pt;
  font-weight: 500;
}
#pricing span.price {
  color: #f14a29;
  display: block;
  font-size: 12pt;
}
#pricing p {
  padding-top: 10px;
  text-align: center;
}
#pricing ul {
  text-align: center;
}
.pricing_box {
  -webkit-box-shadow: 5px 8px 0px 0px black;
  -moz-box-shadow: 0 8px 0px 0px #d3d3d3;
  box-shadow: 5px 8px 6px -6px #d3d3d3;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
  background: #e1e1e1;
  padding: 10px 0px;
}
#pricing_select {
  background: #f14a29;
  color: #FFF;
}
#pricing_select small {
  color: #FFFFFF;
  font-weight: 600;
}
#pricing_select span.price {
  color: #FFFFFF;
}
#pricing_action {
  text-align: center;
  padding-top: 30px;
}

#server-errors {
  list-style-type: none;
  margin-left: 0;
}

// Bootstrap overrides
.table tbody tr:hover > td,
.table tbody tr:hover > th {
  background-color: transparent;
}

.navbar-fixed-top {
  margin-bottom: 18px;
}

#tab-project .inline-input {
  display: inline;
}

.current-user-gravatar {
  width: 24px;
}

// CodeMirror overrides
.CodeMirror.cm-s-twilight {
  border-radius: 3px;
  border: 1px solid transparent;
}

